# hft-jump-diffusion

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
src/hft_jd/: __init__.py  cli.py  coefficients.py  params.py  pde.py  policy.py  simulation.py
tests/: test_coefficients.py  test_pde.py  test_simulation.py
