[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hft-jump-diffusion"
version = "0.1.0"
description = "Semi-Markov and Hawkes jump-diffusion models for algorithmic & high-frequency trading"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nikita Berezyuk" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "streamlit>=1.32",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
hft-jd-dashboard = "hft_jd.cli:run_dashboard"

[tool.hatch.build.targets.wheel]
packages = ["src/hft_jd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
